--- a/Dockerfile.shard
+++ b/Dockerfile.shard
@@ -22,6 +22,7 @@ FROM alpine:3.19
 RUN apk add --no-cache ca-certificates libc6-compat
 
 COPY --from=builder /shard /shard
+COPY storage /storage
 
 EXPOSE 8545
 
