--- a/Dockerfile.shard
+++ b/Dockerfile.shard
@@ -24,6 +24,7 @@ RUN apk add --no-cache ca-certificates libc6-compat
 COPY --from=builder /shard /shard
 
 COPY storage /storage
+COPY config/config.json /config/config.json
 
 EXPOSE 8545
 
