Refactor Dockerfile to create test environment

--- a/Dockerfile.shard
+++ b/Dockerfile.shard
@@ -13,6 +13,9 @@ RUN go mod download
 # Copy source code
 COPY . .
 
+# Create test environment (generate test_statedb under /app/storage)
+RUN go run ./storage/create_storage.go
+
 # Build shard binary (CGO needed for crypto)
 RUN CGO_ENABLED=1 GOOS=linux go build -o /shard ./cmd/shard
 
@@ -22,8 +25,7 @@ FROM alpine:3.19
 RUN apk add --no-cache ca-certificates libc6-compat
 
 COPY --from=builder /shard /shard
-
-COPY storage /storage
+COPY --from=builder /app/storage /storage
 COPY config/config.json /config/config.json
 
 EXPOSE 8545
