--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,34 @@
 {
     "shard_num": 6,
     "test_account_num": 100,
-    "storage_dir": "/storage/test_statedb/"
+    "num_contracts": 12,
+    "storage_dir": "/storage/test_statedb/",
+    
+    "benchmark": {
+        "enabled": true,
+        "duration_seconds": 5,
+        "warmup_seconds": 10,
+        "cooldown_seconds": 5,
+        
+        "workload": {
+            "ct_ratio": 0.5,
+            "send_contract_ratio": 0.5,
+            "read_write_ratio": 0.5,
+            "injection_rate": 10,
+            "skewness_theta": 0.0,
+            "involved_shards": 3
+        },
+        
+        "output": {
+            "format": "csv",
+            "file": "results/benchmark_results.csv",
+            "include_raw_latencies": false
+        },
+        
+        "sweep": {
+            "enabled": false,
+            "parameter": "ct_ratio",
+            "values": [0.0, 0.25, 0.5, 0.75, 1.0]
+        }
+    }
 }
