--- a/config/config.json
+++ b/config/config.json
@@ -3,6 +3,7 @@
     "test_account_num": 100,
     "num_contracts": 12,
     "storage_dir": "/storage/test_statedb/",
+    "block_time_seconds": 1,
     
     "benchmark": {
         "enabled": true,
@@ -13,7 +14,6 @@
         "workload": {
             "ct_ratio": 0.5,
             "send_contract_ratio": 0.5,
-            "read_write_ratio": 0.5,
             "injection_rate": 10,
             "skewness_theta": 0.0,
             "involved_shards": 3
