--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,13 @@ services:
       dockerfile: Dockerfile.orchestrator
     container_name: shard-orch
     environment:
-      - NUM_SHARDS=8
       - PORT=8080
       - BYTECODE_STORE_PATH=/data/bytecode
     ports:
       - "8080:8080"
     volumes:
       - orchestrator-bytecode:/data/bytecode
+      - ./config:/config
     networks:
       - sharding-net
     healthcheck:
@@ -33,6 +33,8 @@ services:
       - ORCHESTRATOR_URL=http://shard-orch:8080
     ports:
       - "8545:8545"
+    volumes:
+      - ./config:/config
     depends_on:
       - shard-orch
     networks:
@@ -49,6 +51,8 @@ services:
       - ORCHESTRATOR_URL=http://shard-orch:8080
     ports:
       - "8546:8545"
+    volumes:
+      - ./config:/config
     depends_on:
       - shard-orch
     networks:
@@ -65,6 +69,8 @@ services:
       - ORCHESTRATOR_URL=http://shard-orch:8080
     ports:
       - "8547:8545"
+    volumes:
+      - ./config:/config
     depends_on:
       - shard-orch
     networks:
@@ -81,6 +87,8 @@ services:
       - ORCHESTRATOR_URL=http://shard-orch:8080
     ports:
       - "8548:8545"
+    volumes:
+      - ./config:/config
     depends_on:
       - shard-orch
     networks:
@@ -97,6 +105,8 @@ services:
       - ORCHESTRATOR_URL=http://shard-orch:8080
     ports:
       - "8549:8545"
+    volumes:
+      - ./config:/config
     depends_on:
       - shard-orch
     networks:
@@ -113,6 +123,8 @@ services:
       - ORCHESTRATOR_URL=http://shard-orch:8080
     ports:
       - "8550:8545"
+    volumes:
+      - ./config:/config
     depends_on:
       - shard-orch
     networks:
@@ -129,6 +141,8 @@ services:
       - ORCHESTRATOR_URL=http://shard-orch:8080
     ports:
       - "8551:8545"
+    volumes:
+      - ./config:/config
     depends_on:
       - shard-orch
     networks:
@@ -145,6 +159,8 @@ services:
       - ORCHESTRATOR_URL=http://shard-orch:8080
     ports:
       - "8552:8545"
+    volumes:
+      - ./config:/config
     depends_on:
       - shard-orch
     networks:
