--- a/config/config.json
+++ b/config/config.json
@@ -3,7 +3,7 @@
     "test_account_num": 100,
     "num_contracts":1024,
     "storage_dir": "/storage/test_statedb/",
-    "block_time_ms": 800,
+    "block_time_ms": 1000,
     
     "benchmark": {
         "enabled": true,
@@ -12,10 +12,10 @@
         "cooldown_seconds": 1,
         
         "workload": {
-            "ct_ratio": 0.5,
+            "ct_ratio": 0,
             "send_contract_ratio": 0.5,
-            "injection_rate": 70,
-            "skewness_theta": 0.9,
+            "injection_rate": 100,
+            "skewness_theta": 0.1,
             "involved_shards": 8
         },
         
@@ -24,6 +24,9 @@
             "file": "results/benchmark_results.csv",
             "include_raw_latencies": false
         },
+
+        "finalization_timeout_seconds": 30,
+        "finalization_poll_interval_ms": 200,
         
         "sweep": {
             "enabled": false,
